:lipstick: Add styling for cart items

--- a/t-shirt/src/App.css
+++ b/t-shirt/src/App.css
@@ -42,3 +42,8 @@
     justify-content: space-between;
     margin: 0px 10px;
 }
+.order-item-right-div {
+    display: flex;
+    justify-content: space-between;
+    width: 150px;
+}
