--- a/t-shirt/src/App.css
+++ b/t-shirt/src/App.css
@@ -48,3 +48,10 @@
     justify-content: space-between;
     width: 150px;
 }
+
+.order-remove-button
+{
+    margin-bottom: 20%;
+    position: relative;
+    bottom: 6%;
+}
