--- a/t-shirt/src/App.css
+++ b/t-shirt/src/App.css
@@ -3,6 +3,16 @@
     text-align: center;
 }
 
+.main-header
+{
+    margin-bottom: 3%;
+}
+
+.card
+{
+    margin: 3% 0%;
+}
+
 .order-item {
     display: flex;
     justify-content: space-between;
