--- a/t-shirt/src/App.css
+++ b/t-shirt/src/App.css
@@ -13,6 +13,11 @@
     margin: 3% 0%;
 }
 
+.nav-bar
+{
+    margin-bottom: 2%;
+}
+
 .order-item {
     display: flex;
     justify-content: space-between;
