:lipstick: Made the images of a maximum width of 20%

--- a/t-shirt/src/App.css
+++ b/t-shirt/src/App.css
@@ -18,6 +18,11 @@
     margin-bottom: 2%;
 }
 
+img
+{
+    max-width: 20%;
+}
+
 .order-item {
     display: flex;
     justify-content: space-between;
