:lipstick: Adding spaces between labels into both edit and new item forms. Also added the url of the image when you are editing the item.

--- a/t-shirt/src/App.css
+++ b/t-shirt/src/App.css
@@ -23,6 +23,11 @@ img
     max-width: 20%;
 }
 
+.spacing-groups
+{
+    margin-bottom: 1%;
+}
+
 .order-item {
     display: flex;
     justify-content: space-between;
