--- a/t-shirt/src/App.css
+++ b/t-shirt/src/App.css
@@ -39,6 +39,13 @@ img
     margin-bottom: 1%;
 }
 
+.item-details-buttons
+{
+    margin-top: 2%;
+    padding: 1% 2%;
+    margin-right: 3%;
+}
+
 .order-item {
     display: flex;
     justify-content: space-between;
