--- a/t-shirt/src/App.css
+++ b/t-shirt/src/App.css
@@ -14,6 +14,12 @@
     margin-bottom: 3%;
 }
 
+.searchbar-button
+{
+    padding: 4% 30%;
+    margin-right: 5%;
+}
+
 .card
 {
     margin: 3% 0%;
