--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap');
+
+/* Default Styles */
+
 .App {
-  text-align: center;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-header
+{
+    margin-bottom: 3%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.searchbar-button
+{
+    padding: 4% 30%;
+    margin-right: 5%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card
+{
+    margin: 3% 0%;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-bar
+{
+    margin-bottom: 2%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img
+{
+    max-width: 20%;
+}
+
+.item-details-container
+{
+    font-family: 'Montserrat', sans-serif;
+}
+
+.spacing-groups
+{
+    margin-bottom: 1%;
+}
+
+.item-details-buttons
+{
+    margin-top: 2%;
+    padding: 1% 2%;
+    margin-right: 3%;
+}
+
+.new-item-save-button, .edit-item-save-button
+{
+    padding: 1% 10%;
+    margin-top: 2%;
+}
+
+.order-item {
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 10px;
+}
+.order-item-right-div {
+    display: flex;
+    justify-content: space-between;
+    width: 150px;
+}
+
+.order-remove-button
+{
+    margin-bottom: 20%;
+    position: relative;
+    bottom: 6%;
+}
+
+#clear-cart-button
+{
+    margin-right: 5%;
 }
